# Computational-Geometry

./: .gitignore  CMakeLists.txt  ExerciseCOG.pro  ExerciseCOG.pro.user.a24bb11  ExerciseCOG.pro.user.fbd5cb0  Makefile
CgBase/: CgEnums.h
CgEvents/: CgButtonPressedEvent.cpp  CgButtonPressedEvent.h  CgKdTreeUpdateDisplaySplitPlanesEvent.h  CgSmoothSelectedPointNeighborsEvent.cpp  CgSmoothSelectedPointNeighborsEvent.h  CgSmoothSurfaceEvent.h
CgQtViewer/: CGQtGLRenderWidget.cpp  CgQtGui.cpp  CgQtGui.h
CgSceneGraph/: CgHalfEdgePrimitives.cpp  CgHalfEdgePrimitives.h  CgHalfEdgeTriangleMesh.cpp  CgHalfEdgeTriangleMesh.h  CgKdTree.cpp  CgKdTree.h  CgMovingLeastSquares.cpp  CgMovingLeastSquares.h  CgPointCloud.cpp  CgPointCloud.h  CgSceneControl.cpp  CgSceneControl.h  CgTriangleMesh.cpp  CgTriangleMesh.h  LimitedSizePriorityQueue.h
CgUtils/: CgEventEnums.h  ObjLoader.cpp
